<resources>
    <string name="app_name">InterPrep</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_player">Add Player</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="player_name">Player Name</string>
    <string name="player_position">Position</string>
    <string name="player_number">Jersey Number</string>
    <string name="player_age">Age</string>
    <string name="player_tds">Td\'s</string>
    <string name="player_yards">Yards</string>
    <string name="player_seasons">Seasons in League</string>
</resources>
